# 42-tools-zed

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
lsp-server/: Cargo.toml
lsp-server/src/: main.rs
zed-extension/src/: lib.rs
