[package]
name = "forty-two-tools-extension"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/edizk/42-tools-zed"

[lib]
crate-type = ["cdylib"]
path = "zed-extension/src/lib.rs"

[dependencies]
zed_extension_api = "0.7.0"

[workspace]
members = ["lsp-server"]
resolver = "2"
