[package]
name = "forty-two-tools-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/edizk/42-tools-zed"

[dependencies]
chrono = { version = "0.4.40", features = ["clock"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-lsp = "0.20.0"

[dev-dependencies]
tempfile = "3.18.0"
